--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Lexend+Exa&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
-  <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="manifest" href="./manifest.json">
   <title>Music App</title>
 </head>
 <body>
@@ -17,30 +17,30 @@
     </header>
     <div class="pads">
       <div class="pad-top">
-          <div class="pad1">
-            <audio class="sound" src="./sounds/bubbles.mp3"></audio>
-          </div>
-          <div class="pad2">
-            <audio class="sound" src="./sounds/clay.mp3"></audio>
-          </div>
-          <div class="pad3">
-            <audio class="sound" src="./sounds/confetti.mp3"></audio>
-          </div>
+        <div class="pad1">
+          <audio class="sound" src="./assets/audio/bubbles.mp3"></audio>
+        </div>
+        <div class="pad2">
+          <audio class="sound" src="./assets/audio/clay.mp3"></audio>
+        </div>
+        <div class="pad3">
+          <audio class="sound" src="./assets/audio/confetti.mp3"></audio>
+        </div>
       </div>
       <div class="pad-bottom">
         <div class="pad4">
-          <audio class="sound" src="./sounds/glimmer.mp3"></audio>
+          <audio class="sound" src="./assets/audio/glimmer.mp3"></audio>
         </div>
         <div class="pad5">
-          <audio class="sound" src="./sounds/moon.mp3"></audio>
+          <audio class="sound" src="./assets/audio/moon.mp3"></audio>
         </div>
         <div class="pad6">
-          <audio class="sound" src="./sounds/ufo.mp3"></audio>
+          <audio class="sound" src="./assets/audio/ufo.mp3"></audio>
         </div>
       </div>
     </div>
   </div>
 
-  <script src="./index.js"></script>
+  <script src="./assets/js/index.js"></script>
 </body>
 </html>
