--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lexend+Exa&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <link rel="manifest" href="manifest.json">
-  <title>Music App</title>
+  <title>MixCentro</title>
 </head>
 <body>
   <div class="app">
